<resources>
    <!--App Name and Screen Titles-->
    <string name="app_name">Weather App</string>
    <string name="locations_title">Locations</string>
    <string name="location_addition_map_title">Location coordinates</string>
    <string name="location_addition_name_title">Location name</string>
    <string name="location_addition_details_title">Weather details</string>
    <string name="settings_title">Settings</string>
    <string name="triggers_title">Triggers</string>
    <string name="trigger_addition_locations_title">Trigger locations</string>
    <string name="trigger_addition_conditions_title">Trigger conditions</string>
    <string name="trigger_addition_time_title">Trigger time</string>

    <!--Locations Screen-->
    <string name="empty_locations_list_message">You don\'t have any added locations.\nTap the button below to get started.</string>
    <string name="no_favorite_locations_message">You don\'t have any favorite locations. Tap on the heart next to the location to add it to your favorites.</string>

    <!--Location Addition Screens-->
    <string name="next">Next</string>
    <string name="finish">Finish</string>

    <!--Location Addition Map Screen-->
    <string name="current_location_button">current location</string>
    <string name="empty_geocoding_result_message">Location not found. Please, enter a valid location name.</string>

    <!--Location Addition Name Screen-->
    <string name="input_name_hint">Input Location Name</string>
    <string name="input_name_helper_text">Required*</string>

    <!--Location Addition Details Screen-->
    <string name="weather_details_message">Show location weather</string>
    <string name="confirm_next_day_forecast">with forecast for the next day</string>
    <string name="deny_next_day_forecast">without forecast for the next day</string>

    <!--Location Item-->
    <string name="current_temperature">Current temperature: %1$s</string>
    <string name="tomorrow_temperature">Tomorrow temperature: %1$s</string>

    <!--Setting Screen-->
    <string name="units_system_choosing_title">Units System:</string>
    <string name="metric_units">Metric Units</string>
    <string name="imperial_units">Imperial Units</string>
    <string name="application_theme_choosing_title">Application Theme:</string>
    <string name="day_theme">Day Theme</string>
    <string name="night_theme">Night Theme</string>
    <string name="system_theme">System Theme</string>
    <string name="app_version">App version is %1$s</string>

    <!--Trigger Addition Screen-->
    <string name="select_condition_type">Select condition type</string>
    <string name="input_amount">Input amount</string>
    <string name="select_expression">Select expression</string>
    <string name="add_new_condition">Add new condition</string>
    <string name="concrete_date_period">Concrete date period</string>
    <string name="input_date_period">Input date period</string>
    <string name="select_time_period">Select time period:</string>
    <string name="add_conditions">Add conditions:</string>
    <string name="choose_locations">Choose Locations:</string>
    <string name="no_locations_while_creating_trigger_message">You don\'t have any added locations.\nPlease add locations before creating triggers.</string>
    <string name="the_next_day">The next day</string>

    <!--Trigger Condition-->
    <string-array name="condition_types">
        <item>Temperature</item>
        <item>Pressure</item>
        <item>Humidity</item>
        <item>Wind Speed</item>
        <item>Wind Direction</item>
    </string-array>

    <string-array name="condition_expression_types">
        <item> Greater </item>
        <item> Less </item>
        <item> Greater or equal</item>
        <item> Less or equal</item>
        <item> Equal </item>
        <item> Not equal </item>
    </string-array>

    <!--Weather Details-->
    <!--p1 is weather icon name e.g. 10d-->
    <string name="weather_icon_path" translatable="false">"https://openweathermap.org/img/wn/%1$s@2x.png"</string>
    <!--p1 is the wind power, p2 is the wind direction-->
    <string name="wind_data">Wind power is %1$s from %2$s</string>
    <string name="humidity_data">Humidity is %1$d%%</string>
    <string name="pressure_data">Pressure is %1$d hPa</string>
    <string name="temperature_chart_title">Temperature Chart</string>

    <!--Temperature-->
    <!--p1 is the sign +/-,p2 is a value without sign, p3 is a metric unit-->
    <string name="temperature" translatable="false">%1$s%2$d%3$s</string>
    <!--Wind-->
    <!--p1 is a value, p2 is the unit (m/s or mi/h)-->
    <string name="wind_speed" translatable="false">%1$d %2$s</string>

    <!--Units-->
    <string-array name="temperature_units">
        <item>°C</item>
        <item>°F</item>
    </string-array>
    <string-array name="wind_speed_units">
        <item>m/s</item>
        <item>mi/h</item>
    </string-array>
    <string-array name="directions">
        <item>N</item>
        <item>NE</item>
        <item>E</item>
        <item>SE</item>
        <item>S</item>
        <item>SW</item>
        <item>W</item>
        <item>NW</item>
    </string-array>

    <!--TabLayout Items-->
    <string name="all">ALL</string>
    <string name="favorites">FAVORITES</string>

    <!--Bottom Navigation Items-->
    <string name="locations">Locations</string>
    <string name="triggers">Triggers</string>
    <string name="settings">Settings</string>

    <!--Content Descriptions -->
    <string name="favorite_icon">favorite icon</string>
    <string name="location_adding_button">location adding</string>
    <string name="weather_icon">weather icon</string>
    <string name="forecast_icon">forecast icon</string>
    <string name="navigate_up">navigate up</string>
    <string name="search">Search</string>
    <string name="clear_text">clear text</string>

    <!--Toolbar Actions Titles -->
    <string name="delete_location">delete location</string>

    <!--Exceptions -->
    <string name="default_exception_message">An unexpected error occurred</string>
    <string name="empty_field_error">The field is empty</string>
    <string name="gps_off_error">Please, enable gps to get current location</string>
    <string name="no_network_connection_error">There is no internet connection. Data has not been updated</string>
    <string name="location_list_loading_exception">An error occurred while getting the list of locations</string>
    <string name="location_weather_loading_exception">An error occurred while getting the location weather data</string>
    <string name="current_location_permissions_exception">No permission to get current location</string>
    <string name="check_internet_connection_message">"Please check your internet connection!"</string>
    <string name="unable_to_get_data">Unable to get data!</string>

    <!--Other -->
    <string name="refresh">Try Again</string>
    <string name="close">Close</string>
    <string name="confirm_title">Are you sure?</string>
    <string name="location_delete_message">The location will be permanently deleted</string>
    <string name="confirm">Confirm</string>
    <string name="deny">Deny</string>
    <string name="ok">OK</string>
    <string name="error">Error!</string>
    <string name="network_error">Network Error!</string>
</resources>