<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_screen_padding"
    tools:context=".presentation.ui.location_addition_wizard.location_addition_details_screen.LocationAdditionDetailsFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_margin"
        android:text="@string/weather_details_message"
        android:textColor="?attr/colorOnBackground"
        android:textSize="@dimen/huge_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/confirmRB"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/confirmRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_next_day_forecast" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/denyRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deny_next_day_forecast" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        style="@style/WizardButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>