<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_screen_padding"
    tools:context=".presentation.ui.trigger_addition_wizard.trigger_addition_time_screen.TriggerAdditionTimeFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/timePeriodSelectionHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_textview_padding"
        android:text="@string/select_time_period"
        android:textColor="?attr/colorOnBackground"
        android:textSize="@dimen/huge_text_size"
        app:layout_constraintBottom_toTopOf="@+id/timePeriodSelectionRG"
        app:layout_constraintStart_toStartOf="@+id/timePeriodSelectionRG" />

    <RadioGroup
        android:id="@+id/timePeriodSelectionRG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/nextDayRB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/nextDayRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_next_day" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/concreteDatePeriodRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/concrete_date_period" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/datePeriodInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_date_period"
                android:minWidth="@dimen/min_edit_text_width"
                app:endIconDrawable="@drawable/icon_calendar_month_24"
                app:endIconMinSize="@dimen/common_icon_size"
                app:endIconMode="custom"
                app:endIconScaleType="center"
                app:endIconTint="?attr/colorOnBackground">

                <AutoCompleteTextView
                    android:id="@+id/datePeriodInputTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        style="@style/WizardButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/timePeriodSelectionRG"
        app:layout_constraintStart_toStartOf="@+id/timePeriodSelectionRG" />

</androidx.constraintlayout.widget.ConstraintLayout>