<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="@dimen/common_screen_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/locationsChoosingTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_textview_padding"
            android:text="@string/choose_locations"
            android:textColor="?attr/colorOnBackground"
            android:textSize="@dimen/huge_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/locationsChoosingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationsChoosingTitle">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/locationsChoosingRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationsChoosingTitle"
                tools:itemCount="3"
                tools:listitem="@layout/item_check_location" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/emptyLocationsChoosingListMessageTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/small_margin"
                android:gravity="center"
                android:padding="@dimen/small_textview_padding"
                android:text="@string/no_locations_while_creating_trigger_message"
                android:textColor="?attr/colorOnBackground"
                android:textSize="@dimen/big_text_size" />
        </FrameLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider1"
            android:layout_width="0dp"
            android:layout_height="@dimen/horizontal_barrier_height"
            android:layout_marginTop="@dimen/small_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationsChoosingLayout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/conditionsAdditionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:padding="@dimen/small_textview_padding"
            android:text="@string/add_conditions"
            android:textColor="?attr/colorOnBackground"
            android:textSize="@dimen/huge_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/conditionsRV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/conditionsAdditionTitle"
            tools:itemCount="2"
            tools:listitem="@layout/item_condition" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider2"
            android:layout_width="0dp"
            android:layout_height="@dimen/horizontal_barrier_height"
            android:layout_marginTop="@dimen/small_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/conditionsRV" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/timePeriodSelectionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:padding="@dimen/small_textview_padding"
            android:text="@string/select_time_period"
            android:textColor="?attr/colorOnBackground"
            android:textSize="@dimen/huge_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider2" />

        <RadioGroup
            android:id="@+id/timePeriodSelectionRG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/nextDayRB"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timePeriodSelectionTitle">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/nextDayRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_next_day" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/concreteDatePeriodRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/concrete_date_period" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/datePeriodInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_date_period"
                    android:minWidth="@dimen/min_edit_text_width"
                    app:endIconDrawable="@drawable/icon_calendar_month_24"
                    app:endIconMinSize="@dimen/common_icon_size"
                    app:endIconMode="custom"
                    app:endIconScaleType="center"
                    app:endIconTint="?attr/colorOnBackground">

                    <AutoCompleteTextView
                        android:id="@+id/datePeriodInputTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:maxWidth="@dimen/max_button_width"
            android:minWidth="@dimen/min_button_width"
            android:text="@string/finish"
            app:layout_constraintEnd_toEndOf="@+id/timePeriodSelectionRG"
            app:layout_constraintStart_toStartOf="@+id/timePeriodSelectionRG"
            app:layout_constraintTop_toBottomOf="@+id/timePeriodSelectionRG" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="@dimen/elevation_level_3"
            app:elevation="@dimen/elevation_level_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
