<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_screen_padding"
    tools:context=".presentation.ui.trigger_addition_wizard.trigger_addition_conditions_screen.TriggerAdditionConditionsFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/conditionsAdditionHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_textview_padding"
        android:text="@string/add_conditions"
        android:textColor="?attr/colorOnBackground"
        android:textSize="@dimen/huge_text_size"
        app:layout_constraintStart_toStartOf="@+id/conditionsRV"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/addConditionIVLayout"
        android:layout_width="@dimen/common_icon_layout_size"
        android:layout_height="@dimen/common_icon_layout_size"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="@+id/conditionsAdditionHint"
        app:layout_constraintEnd_toEndOf="@+id/conditionsRV"
        app:layout_constraintTop_toTopOf="@+id/conditionsAdditionHint">

        <ImageView
            android:id="@+id/addConditionIV"
            android:layout_width="@dimen/common_icon_size"
            android:layout_height="@dimen/common_icon_size"
            android:layout_gravity="center"
            android:contentDescription="@string/add_new_condition"
            android:src="@drawable/icon_add_24"
            app:tint="?attr/colorOnBackground" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/conditionsRV"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:minWidth="@dimen/min_edit_text_width"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conditionsAdditionHint"
        tools:itemCount="2"
        tools:listitem="@layout/item_condition" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        style="@style/WizardButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/conditionsRV"
        app:layout_constraintStart_toStartOf="@+id/conditionsRV" />

</androidx.constraintlayout.widget.ConstraintLayout>